# live-md

./: .gitignore  Cargo.toml  build.rs  flake.nix
.github/workflows/: coverage.yml  tests.yml
doc/: devlog.html  devlog.md
nix/: common.nix  shell.nix
src/: config.rs  lib.rs  main.rs  markdown.rs  server.rs  watcher.rs
src/templates/: index-start.html  page-start.html
tests/: integration.rs
